[package]
name = "callwheel"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
device_query = "4.0.1"
directories = "6.0.0"
eframe = { version = "0.34.1", features = ["glow"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_HiDpi"] }

[build-dependencies]
winresource = "0.1.22"
