[package]
name = "callwheel"
version = "0.1.1"
edition = "2024"

[dependencies]
arboard = "3.6.1"
device_query = "4.0.1"
directories = "6.0.0"
eframe = { version = "0.34.1", features = ["glow"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
rand = "0.10.1"
rfd = { version = "0.15.4", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_HiDpi", "Win32_System_Threading", "Win32_Media_Audio"] }

[build-dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
winresource = "0.1.22"
